--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,18 +99,12 @@ jobs:
   test:
     runs-on: ubuntu-24.04
     needs:
-      - prepare
       - buildkit-binaries
-    strategy:
-      fail-fast: false
-      matrix:
-        include: ${{ fromJson(needs.prepare.outputs.includes) }}
     env:
-      TEST_FLAGS: -v --timeout=5h
+      TEST_FLAGS: -v
       TEST_IMAGE_BUILD: 0
       TEST_IMAGE_ID: buildkit-bench
       TEST_RESULTS_DIR: bin/results
-      TEST_GEN: 0
     steps:
       -
         name: Download binaries
@@ -155,6 +149,81 @@ jobs:
         run: |
           ./hack/test
         env:
+          TEST_TYPES: test
+      -
+        name: Result
+        run: |
+          resultPath=./${{ env.TEST_RESULTS_DIR }}/gotestoutput-tests.json
+          mv ./${{ env.TEST_RESULTS_DIR }}/gotestoutput.json $resultPath
+          jq . $resultPath
+      -
+        name: Upload results
+        uses: actions/upload-artifact@v4
+        with:
+          name: tests-results
+          path: ${{ env.TEST_RESULTS_DIR }}
+          if-no-files-found: error
+          retention-days: 1
+
+  benchmark:
+    runs-on: ubuntu-24.04
+    needs:
+      - prepare
+      - buildkit-binaries
+    strategy:
+      fail-fast: false
+      matrix:
+        include: ${{ fromJson(needs.prepare.outputs.includes) }}
+    env:
+      TEST_FLAGS: -v --timeout=5h
+      TEST_IMAGE_BUILD: 0
+      TEST_IMAGE_ID: buildkit-bench
+      TEST_RESULTS_DIR: bin/results
+    steps:
+      -
+        name: Download binaries
+        uses: actions/download-artifact@v4
+        with:
+          path: /tmp/buildkit-binaries
+          pattern: ${{ env.BUILDKIT_ARTIFACT_KEY }}-*
+          merge-multiple: true
+      -
+        name: Extract binaries
+        run: |
+          mkdir -p ./bin/buildkit-binaries
+          for f in "/tmp/buildkit-binaries"/*.tar.gz; do
+            (set -x ; tar -xzvf "$f" -C ./bin/buildkit-binaries && rm "$f")
+          done
+          tree -nph ./bin/buildkit-binaries
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          version: ${{ env.SETUP_BUILDX_VERSION }}
+          driver: docker
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      -
+        name: Build test image
+        uses: docker/bake-action@v5
+        with:
+          source: "{{defaultContext}}"
+          targets: tests
+          provenance: false
+          set: |
+            *.cache-from=type=registry,ref=${{ env.BUILDKIT_CACHE_REPO }}:tests-base
+            *.contexts.buildkit-binaries=cwd://bin/buildkit-binaries
+            *.output=type=docker,name=${{ env.TEST_IMAGE_ID }}
+      -
+        name: Checkout
+        uses: actions/checkout@v4
+      -
+        name: Benchmark
+        run: |
+          ./hack/test
+        env:
+          TEST_TYPES: benchmark
           TEST_BENCH_REGEXP: ${{ matrix.test }}$
           TEST_BENCH_RUN: ${{ matrix.count }}
           TEST_BENCH_TIME: ${{ matrix.benchtime }}
@@ -179,6 +248,7 @@ jobs:
     runs-on: ubuntu-24.04
     needs:
       - test
+      - benchmark
     steps:
       -
         name: Download results
